<resources>
    <string name="app_name">Notas</string>
    <string name="title_activity_notes">Notas</string>
    <string name="title_activity_categories">Categorías</string>
    <string name="title_activity_note_edit">Editar nota</string>
    <string name="title_activity_category_edit">Editar categoría</string>

    <string name="no_notes">No hay notas todavía</string>
    <string name="no_categories">No hay categorías todavía</string>
    <string name="action_settings">Settings</string>
    <string name="menu_insert_note">Añadir nota</string>
    <string name="menu_delete_note">Eliminar nota</string>
    <string name="menu_edit_note">Editar nota</string>

    <string name="menu_insert_category">Añadir categoría</string>
    <string name="menu_delete_category">Eliminar categoría</string>
    <string name="menu_edit_category">Editar categoría</string>
    <string name="menu_show_notes">Mostrar notas de la categoría</string>

    <string name="send_email">Enviar nota por email</string>
    <string name="send_SMS">Enviar nota por SMS</string>
    <string name="menu_test_unitarios">Realizar tests unitarios</string>
    <string name="menu_test_volumen">Realizar test de volumen</string>
    <string name="menu_test_sobrecarga">Realizar test de sobrecarga</string>
    <string name="menu_ordenar_por_notas">Ordenar por notas</string>
    <string name="menu_ordenar_por_categorias">Ordenar por categorías</string>
    <string name="menu_mostrar_categorias">Mostrar categorías</string>
    <string name="menu_mostrar_notas">Todas las notas</string>
    <string name="menu_ver_previstas">Notas previstas</string>
    <string name="menu_ver_vigentes">Notas vigentes</string>
    <string name="menu_ver_caducadas">Notas caducadas</string>


    <string name="title">Título</string>
    <string name="category">Categoría</string>
    <string name="body">Cuerpo</string>

    <string name="name">Nombre de la categoría</string>

    <string name="confirm">Confirmar</string>

    <string name="id">ID</string>
    <string name="id_value">***</string>
</resources>
